Removing bug to scroll right on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+
+header, footer {
+    width: 100%;
+    text-align: center;
+}
+main {
+    width: 100%;
+    margin-top: 20px;
+}
 a {
     text-decoration: none; /* Remove underline from links */
 }
@@ -9,22 +18,13 @@ body {
 }
 b.personaltitle{
     font-weight: bold;
-    font-size: 25px;
+    font-size: 23px;
     margin-left: 10px;
 }
 img.profileimg {
     width: 90px; 
     height: 90px; 
     border-radius: 50%;
-
-}
-header, footer {
-    width: 100%;
-    text-align: center;
-}
-main {
-    width: 600px;
-    margin-top: 20px;
 }
 h1, h2 {
     text-align: center;
